[package]
name = "vulkanrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = {version = "0.37.0", features = ["linked"]}
winit = "0.27.1"
raw-window-handle = "0.5.0"
glam = "0.21.3"
memoffset = "0.6.5"